[package]
name = "stochastic-rs-quant"
version = "2.0.0-beta.1"
edition = "2024"
license = "MIT"
description = "Quantitative finance: pricing, calibration, vol surfaces, instruments."
repository = "https://github.com/dancixx/stochastic-rs"
publish = false

[lib]
doctest = false

[features]
default = []
openblas = ["dep:ndarray-linalg", "dep:openblas-src"]
yahoo = ["dep:yahoo_finance_api", "dep:time", "dep:polars", "dep:tokio-test"]
python = ["dep:pyo3"]

[dependencies]
stochastic-rs-core = { path = "../stochastic-rs-core", version = "2.0.0-beta.1" }
stochastic-rs-distributions = { path = "../stochastic-rs-distributions", version = "2.0.0-beta.1" }
stochastic-rs-stochastic = { path = "../stochastic-rs-stochastic", version = "2.0.0-beta.1" }
stochastic-rs-stats = { path = "../stochastic-rs-stats", version = "2.0.0-beta.1" }
stochastic-rs-copulas = { path = "../stochastic-rs-copulas", version = "2.0.0-beta.1" }
ndarray = { version = "0.17.2", features = ["rayon", "matrixmultiply-threading"] }
ndarray-stats = "0.7.0"
ndarray-linalg = { version = "0.18.1", features = ["openblas-system"], optional = true }
openblas-src = { version = "0.10", features = ["cblas"], optional = true }
ndarray-rand = "0.16.0"
ndarray-npy = "0.10.0"
ndrustfft = "0.6.2"
nalgebra = "0.33.2"
num-traits = "0.2.19"
num-complex = { version = "0.4.6", features = ["rand"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
roots = "0.0.8"
kendalls = "1.0.0"
statrs = "0.18.0"
levenberg-marquardt = "0.14.0"
linreg = "0.2.0"
argmin = "0.11.0"
argmin-math = { version = "0.5", features = ["ndarray_latest-nolinalg", "vec"] }
gauss-quad = "0.3.1"
quadrature = "0.1.2"
sci-rs = "0.4.1"
scilib = "1.0.0"
slsqp = "1.0.0"
implied-vol = "2.0.0"
chrono = "0.4.38"
parking_lot = "0.12.5"
anyhow = "1.0.89"
either = "1.15.0"
ordered-float = "5.0.0"
plotly = { version = "0.10.0", features = ["plotly_ndarray"] }
flate2 = "1.1.2"
owens-t = "0.1.5"
wide = "1.3.0"
time = { version = "0.3.36", features = ["formatting", "parsing"], optional = true }
polars = { version = "0.43.1", features = ["lazy"], optional = true }
yahoo_finance_api = { version = "2.3.0", optional = true }
tokio-test = { version = "0.4.4", optional = true }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
