[package]
name = "stochastic-rs-stats"
version = "2.0.0-rc.2"
edition = "2024"
license = "MIT"
description = "Statistical estimators for stochastic processes."
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs-stats"
repository = "https://github.com/dancixx/stochastic-rs"
keywords = ["statistics", "estimation", "hurst", "mle", "stochastic"]
categories = ["mathematics", "science"]

[lib]
doctest = false

[features]
default = []
openblas = [
    "dep:ndarray-linalg",
    "dep:openblas-src",
    "ndarray-linalg/openblas-system",
    "stochastic-rs-stochastic/openblas",
]
openblas-static = [
    "dep:ndarray-linalg",
    "dep:openblas-src",
    "ndarray-linalg/openblas-static",
    "openblas-src/static",
    "stochastic-rs-stochastic/openblas-static",
]
python = [
    "dep:pyo3",
    "dep:numpy",
    "stochastic-rs-core/python",
    "stochastic-rs-distributions/python",
    "stochastic-rs-stochastic/python",
]

[dependencies]
stochastic-rs-core = { workspace = true }
stochastic-rs-distributions = { workspace = true }
stochastic-rs-stochastic = { workspace = true }
ndarray = { workspace = true, features = ["rayon", "matrixmultiply-threading"] }
ndarray-stats = { workspace = true }
ndarray-linalg = { workspace = true, optional = true }
openblas-src = { workspace = true, features = ["cblas"], optional = true }
ndarray-rand = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
roots = { workspace = true }
kendalls = { workspace = true }
levenberg-marquardt = { workspace = true }
linreg = { workspace = true }
argmin = { workspace = true }
argmin-math = { workspace = true, features = ["ndarray_latest-nolinalg", "vec"] }
gauss-quad = { workspace = true }
quadrature = { workspace = true }
sci-rs = { workspace = true }
scilib = { workspace = true }
slsqp = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
ndrustfft = { workspace = true }
anyhow = { workspace = true }
either = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"], optional = true }
numpy = { workspace = true, optional = true }
