[package]
name = "stochastic-rs-stochastic"
version = "2.0.0-beta.1"
edition = "2024"
license = "MIT"
description = "Stochastic process simulation."
repository = "https://github.com/dancixx/stochastic-rs"
publish = false

[lib]
doctest = false

[features]
default = []
openblas = []
gpu = ["dep:cubecl", "dep:gpu-fft"]
gpu-cuda = ["gpu", "dep:cubecl-cuda"]
gpu-wgpu = ["gpu", "dep:cubecl-wgpu"]
cuda-native = ["dep:cudarc"]
metal = ["dep:metal"]
accelerate = []
python = ["dep:pyo3", "stochastic-rs-distributions/python"]

[dependencies]
stochastic-rs-core = { path = "../stochastic-rs-core", version = "2.0.0-beta.1" }
stochastic-rs-distributions = { path = "../stochastic-rs-distributions", version = "2.0.0-beta.1" }
ndarray = { version = "0.17.2", features = ["rayon", "matrixmultiply-threading"] }
ndarray-rand = "0.16.0"
ndarray-stats = "0.7.0"
ndrustfft = "0.6.2"
num-complex = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
roots = "0.0.8"
kendalls = "1.0.0"
levenberg-marquardt = "0.14.0"
argmin = "0.11.0"
argmin-math = { version = "0.5", features = ["ndarray_latest-nolinalg", "vec"] }
gauss-quad = "0.3.1"
quadrature = "0.1.2"
nalgebra = "0.33.2"
either = "1.15.0"
anyhow = "1.0.89"
wide = "1.3.0"
sci-rs = "0.4.1"
scilib = "1.0.0"
linreg = "0.2.0"
parking_lot = "0.12.5"
ordered-float = "5.0.0"
statrs = "0.18.0"
plotly = { version = "0.10.0", features = ["plotly_ndarray"] }
cubecl = { version = "0.9.0", optional = true, default-features = false }
cubecl-cuda = { version = "0.9.0", optional = true }
cubecl-wgpu = { version = "0.9.0", optional = true }
cudarc = { version = "0.19.2", optional = true, features = ["cuda-12080", "cuda-version-from-build-system"] }
gpu-fft = { version = "1.1.1", optional = true }
metal = { version = "0.33.0", optional = true }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

[dev-dependencies]
romu = "0.8.0"
stochastic-rs-stats = { path = "../stochastic-rs-stats", version = "2.0.0-beta.1" }
