[package]
name = "stochastic-rs-viz"
version = "2.0.0-beta.1"
edition = "2024"
license = "MIT"
description = "Plotly-based visualization for stochastic-rs processes and distributions."
repository = "https://github.com/dancixx/stochastic-rs"
publish = false

[lib]
doctest = false

[features]
default = []

[dependencies]
stochastic-rs-core = { workspace = true }
stochastic-rs-distributions = { workspace = true }
stochastic-rs-stochastic = { workspace = true }
plotly = { workspace = true, features = ["plotly_ndarray"] }
ndarray = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
ndarray = { workspace = true }
